# tempest_sidecar_plugin

./: README.rst  setup.cfg  setup.py
tempest_sidecar_plugin/: config.py  plugin.py
tempest_sidecar_plugin/tests/api/: base.py  test_sidecar.py
