[metadata]
name = tempest-sidecar-plugin
version = 0.0.1
summary = Basic Tempest plugin with sidecar test case
description-file = README.rst
author = Binoy M V, Sreenath Menon
author-email = binoy@nephoscale.com, sreenath@nephoscale.comm
home-page = https://github.com/binoymvas/tempest_sidecar_plugin
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    tempest-sidecar-plugin = tempest_sidecar_plugin.plugin:SidecarPlugin

[pbr]
warnerrors = true
